<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <!-- General settings -->
    <PreferenceCategory android:key="category_hardware"
        android:title="@string/category_drawing_title">
        <CheckBoxPreference
            android:key="disable_overlays"
            android:title="@string/disable_overlays_startup"
            android:summary="@string/disable_overlays_startup_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="force_hw_ui"
            android:title="@string/force_hw_ui_startup"
            android:summary="@string/force_hw_ui_startup_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
